# Story_teller_with_crewai

./: README.md  pyproject.toml
src/story_teller_with_crewai/: __init__.py  crew.py  main.py
src/story_teller_with_crewai/config/: agents.yaml  tasks.yaml
